# AxonOS

./: .gitignore  BuildConfig.cmake  CMakeLists.txt  README.md  Util.cmake  doxygen.txt
Boot/: CMakeLists.txt
Boot/AxonBoot/: AxonBoot.cpp  AxonBoot.hpp  AxonBoot.lds  CMakeLists.txt  Main.cpp
Boot/AxonBoot/Util/: EarlyScreenPrinter.cpp  EarlyScreenPrinter.hpp  Main.cpp
Boot/AxonBoot/lib/: CMakeLists.txt  Object.cpp  Object.hpp  Types.h  itoa.c  itoa.h  memset.c  memset.h
Boot/AxonBoot/x86/: CMakeLists.txt  RealModeCall.asm  RealModeCall.h  Startup.asm
Boot/x86/: CMakeLists.txt  MBR.asm  TestBootloader.asm  VBR_FAT32.asm
Kernel/: CMakeLists.txt  main.cpp
Kernel/Include/: Attributes.h  CMakeLists.txt  Types.h
Kernel/Include/Memory/: CMakeLists.txt
Kernel/Include/Memory/Allocators/: BuddyAllocator.hpp  PoolAllocator.hpp  StackAllocator.h
Kernel/Include/Memory/Arch/: CMakeLists.txt
Kernel/Include/Memory/Arch/x86/: GdtDescriptor.hpp  GdtSegmentDescriptor.hpp  GdtWrapper.hpp  IdtGateDescriptor32.hpp
Kernel/Src/Memory/Allocators/: StackAllocator.c
Kernel/Src/Memory/Arch/x86/: GdtSegmentDescriptor.cpp  IdtGateDescriptor32.cpp
Test/: CMakeLists.txt
Test/Kernel/Memory/Allocators/: BuddyAllocatorTest.cpp  PoolAllocatorTest.cpp  StackAllocatorTest.cpp
Test/Kernel/Memory/Arch/x86/: GdtDescriptorTest.cpp  GdtSegmentDescriptorTest.cpp  GdtWrapperTest.cpp  IdtGateDescriptor32Test.cpp
Test/Util/: AvlTreeTest.cpp
Tools/: CMakeLists.txt
Tools/Catch2/: CatchMain.cpp
Tools/MakeImg/: CMakeLists.txt  Command.cpp  Command.hpp  CommandParseException.hpp  Context.hpp  DiskImage.cpp  DiskImage.hpp  ExitProcess.cpp  ExitProcess.hpp  ExitProcessException.cpp  Main.cpp  MakeImg.cpp  MakeImg.hpp
Tools/MakeImg/Commands/: Command.hpp  CopyFileCommand.cpp  CopyFileCommand.hpp  LoadImageCommand.cpp  LoadImageCommand.hpp  NewFsCommand.cpp  NewFsCommand.hpp  NewImageCommand.cpp  NewImageCommand.hpp  NewPartCommand.cpp  NewPartCommand.hpp  NewTableLoopCommand.cpp  NewTableLoopCommand.hpp  NewTableMbrCommand.cpp  NewTableMbrCommand.hpp
Tools/MakeImg/Exceptions/: CommandParseException.cpp  CommandParseException.hpp  ExitProcessException.cpp  ExitProcessException.hpp  FileNotFoundException.hpp  IllegalStateException.cpp  IllegalStateException.hpp  IncorrectParameterException.cpp  IncorrectParameterException.hpp  IndexOutOfBoundsException.cpp  IndexOutOfBoundsException.hpp
Tools/MakeImg/Model/: CommandSequence.cpp  CommandSequence.hpp  Context.hpp  DiskImage.cpp  DiskImage.hpp  File.cpp  File.hpp  FileManager.cpp  FileManager.hpp  FsManager.cpp  FsManager.hpp  PartitionTable.cpp  PartitionTable.hpp  PartitionTableManager.cpp  PartitionTableManager.hpp
Tools/MakeImg/Model/FAT32/: Fat32FatCache.cpp  Fat32FatCache.hpp  Fat32File.cpp  Fat32File.hpp  Fat32FileDescriptor.cpp  Fat32FileDescriptor.hpp  Fat32FsManager.cpp  Fat32FsManager.hpp
Tools/MakeImg/Util/: ExitProcess.cpp  ExitProcess.hpp  Main.cpp  Math.cpp  Math.hpp  StringUtil.cpp  StringUtil.hpp
Util/Include/: AvlTree.h
Util/Src/: AvlTree.c
common/include/: Null.h  Types.h
sdk/cmake/: config-amd64.cmake  config-arch.cmake  config-compiler.cmake  config-cross-toolchain.cmake  config-x86.cmake  cross-build.cmake  version.cmake  version.cmake.h
sdk/cmake/util/: compiler-flags.cmake  host-tools.cmake
