add_executable(MakeImg MakeImg.cpp MakeImg.hpp Util/ExitProcess.hpp Exceptions/ExitProcessException.hpp Util/Main.cpp Exceptions/ExitProcessException.cpp Exceptions/FileNotFoundException.hpp Commands/LoadImageCommand.cpp Commands/LoadImageCommand.hpp Util/ExitProcess.cpp Model/DiskImage.cpp Model/DiskImage.hpp Commands/Command.hpp Exceptions/CommandParseException.hpp Model/Context.hpp Commands/NewImageCommand.cpp Commands/NewImageCommand.hpp Exceptions/IllegalStateException.cpp Exceptions/IllegalStateException.hpp Exceptions/CommandParseException.cpp Model/CommandSequence.cpp Model/CommandSequence.hpp Commands/NewTableMbrCommand.cpp Commands/NewTableMbrCommand.hpp Commands/NewPartCommand.cpp Commands/NewPartCommand.hpp Model/PartitionTable.cpp Model/PartitionTable.hpp)
target_include_directories(MakeImg PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})